syntax = "proto3";

message Actions {
    string action = 100;

    oneof options {

    }
}

message MakeOfferAction {
	float price = 1;
	int32 paintingId = 2;
	string owner_pubKey = 3;

}

message AcceptOfferAction {
	Offer offer = 1;
}

message MakePaintingAction {
    repeated float gene = 1;
    string owner_pubKey = 2;
}
