syntax = "proto3";

message PGPayload {
    string action = 100;

    oneof options {
    CreateAccountAction createaccount = 200;
    ChargeAccountAction chargeaccount = 201;
    CreatePaintingAction createPainting = 202;
    CreateOfferAction createoffer = 203;
    AcceptOfferAction acceptoffer = 204;
    }
}

message CreateAccountAction {
    string label = 1;
}

message ChargeAccountAction {
    string amount = 1;
}

message CreatePaintingAction {
	repeated float gene = 1;
}

message CreateOfferAction {
	float price = 1;
	int32 paintingId = 2;
	string owner_pubKey = 3;
}

message AcceptOfferAction {
	Offer offer = 1;
}
